k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: itm-tickets
  labels:
    app.kubernetes.io/part-of: itm-tickets-global
